Pass the architecture to the configure script
Some software may have architecture-dependent configuration, so the
configuration script needs to know which architecture is to be installed.

--- a/debinject.man
+++ b/debinject.man
@@ -63,6 +63,7 @@ The preferred Debian mirror.
 .TP
 .B CONFSCRIPT
 The configuration script to run once packages are unpacked on the local system.
+This configuration script will be passed the ARCH argument when run.
 .SH FILES
 .TP
 .I bootstrap.conf
